# bintree

./: Cargo.toml  README.md
src/: heuristic.rs  lib.rs
