[package]
name = "bintrie"
version = "0.2.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
description = "A performant binary trie data structure that doesnt store data or keys"
keywords = ["binary", "trie"]
documentation = "https://docs.rs/bintrie/"
repository = "https://github.com/vadixidav/bintrie"
license = "MIT"
edition = "2018"
